--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "prepublish": "npm run lint && npm run test && npm run e2e && npm run build"
   },
   "dependencies": {
     "@angular/animations": "~8.2.14",
