--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "prepublish": "npm run lint && npm run test && npm run e2e && npm run build"
+    "prepublish": "npm run lint"
   },
   "dependencies": {
     "@angular/animations": "~8.2.14",
