--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "prepublish": "npm run lint"
+    "prepublish": "npm run lint",
+    "publish": "./scripts/deploy.sh"
   },
   "dependencies": {
     "@angular/animations": "~8.2.14",
